--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Mantenimiento/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Mantenimiento/Index.cshtml
@@ -12,14 +12,20 @@
             new Script { ExtensionSuite = ExtensionSuite.Editors },
             new Script { ExtensionSuite = ExtensionSuite.GridView }
         )
-
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
+<script type="text/javascript">
+    var mensaje = '@ViewBag.Msj';
+    if (mensaje != '') {
+        $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
+    }
+</script>
 <body>
-
-
     <section class="content home">
         <div class="container-fluid">
             @using (Html.BeginForm("Crear", "Mantenimiento", FormMethod.Post))
             {
+                @Html.HiddenFor(m => m.Id_DetalleMtto)
                 <div class="block-header">
                     <div class="row clearfix">
                         <div class="col-lg-5 col-md-5 col-sm-12">
@@ -49,7 +55,9 @@
                                        settings.Properties.DisplayFormatString = "dd, MMMM yyyy";
                                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                                        settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                                       
                                    }).Bind(Model.FechaMtto).GetHtml()
+                                        @Html.ValidationMessageFor(m => m.FechaMtto, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-3">
@@ -64,7 +72,9 @@
                                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                        settings.Properties.TextField = "Descripcion";
                                        settings.Properties.ValueField = "IdEquipoTransporte";
-                                   }).BindList(ViewBag.Vehiculos).GetHtml()
+                                       settings.Properties.ValueType = typeof(int);
+                                   }).BindList(ViewBag.Vehiculos).Bind(Model.id_vehiculo).GetHtml()
+                                        @Html.ValidationMessageFor(m => m.id_vehiculo, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-3">
@@ -79,13 +89,16 @@
                                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                        settings.Properties.TextField = "Mantenimiento";
                                        settings.Properties.ValueField = "Id_Mantenimiento";
-                                   }).BindList(ViewBag.CMantenimiento).GetHtml()
+                                       settings.Properties.ValueType = typeof(int);
+                                   }).BindList(ViewBag.CMantenimiento).Bind(Model.Id_tipomtto).GetHtml()
+                                        @Html.ValidationMessageFor(m => m.Id_tipomtto, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <b>Kilometraje Actual</b>
                                         @Html.TextBoxFor(m => m.Kilometraje_Actual, Model.Kilometraje_Actual.ToString(), new { @class = "form-control number" })
+                                        @Html.ValidationMessageFor(m => m.Kilometraje_Actual, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                             </div>
@@ -95,12 +108,14 @@
                                     <div class="form-group">
                                         <b>Numero de OC(Solo cunado el servicio sea externo)</b>
                                         @Html.TextBoxFor(m => m.NumeroOC, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(m => m.NumeroOC, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-5">
                                     <div class="form-group">
                                         <b>Descripcion del Seervicio Realizado</b>
                                         @Html.TextBoxFor(m => m.DescripcionMtto, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(m => m.DescripcionMtto, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-2">
@@ -109,14 +124,18 @@
                                         @if (ViewBag.EsEdicion == null)
                                         {
                                      
-                                            <input value="Crear" type="submit" class="btn btn-primary btn-icon btn-icon-mini btn-round" />
-                                            @*<button id="BtnCrear" formaction="Crear" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                            @*<input value="Crear" type="submit" class="btn btn-primary btn-icon btn-icon-mini btn-round" />*@
+                                            <button id="BtnCrear" formaction=@Url.Action("Crear") class="btn btn-primary btn-icon  btn-icon-mini btn-round">
                                                 <i class="zmdi zmdi-plus"></i>
-                                            </button>*@
+                                            </button>
                                         }
                                         else
                                         {
-                                            <button id="btnUpDate" formaction="Modificar" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+
+
+                                            @*<input type="submit" id="btnLiquidar" disabled value="Liquidar Camioneta" formaction=@Url.Action("GuardarLiquidar") formmethod="post" class="btn btn-raised btn-primary float-right" />*@
+
+                                            <button id="btnUpDate" formaction=@Url.Action("Modificar") class="btn btn-primary btn-icon  btn-icon-mini btn-round">
                                                 <i class="zmdi zmdi-swap"></i>
                                             </button>
                                         }
